<?xml version="1.0" encoding="UTF-8" ?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>io.github.thanospapapetrou.nefeli</groupId>
    <artifactId>nefeli</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>Nefeli</name>
    <modules>
        <module>nefeli-common</module>
        <module>nefeli-containers</module>
        <module>nefeli-db</module>
        <module>nefeli-harvester</module>
        <module>nefeli-oai-pmh</module>
        <module>nefeli-web</module>
    </modules>
    <properties>
        <maven.compiler.source>25</maven.compiler.source>
        <maven.compiler.target>25</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>jakarta.enterprise</groupId>
                <artifactId>jakarta.enterprise.cdi-api</artifactId>
                <version>4.1.0</version>
            </dependency>
            <dependency>
                <groupId>jakarta.mail</groupId>
                <artifactId>jakarta.mail-api</artifactId>
                <version>2.1.5</version>
            </dependency>
            <dependency>
                <groupId>jakarta.persistence</groupId>
                <artifactId>jakarta.persistence-api</artifactId>
                <version>3.2.0</version>
            </dependency>
            <dependency>
                <groupId>jakarta.servlet</groupId>
                <artifactId>jakarta.servlet-api</artifactId>
                <version>6.1.0</version>
            </dependency>
            <dependency>
                <groupId>jakarta.ws.rs</groupId>
                <artifactId>jakarta.ws.rs-api</artifactId>
                <version>4.0.0</version>
            </dependency>
            <dependency>
                <groupId>jakarta.xml.bind</groupId>
                <artifactId>jakarta.xml.bind-api</artifactId>
                <version>4.0.5</version>
            </dependency>
            <dependency>
                <groupId>org.glassfish.jersey</groupId>
                <artifactId>jersey-bom</artifactId>
                <version>4.0.2</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.hibernate.orm</groupId>
                <artifactId>hibernate-core</artifactId>
                <version>7.3.0.Final</version>
            </dependency>
            <dependency>
                <groupId>org.jboss.weld.servlet</groupId>
                <artifactId>weld-servlet-core</artifactId>
                <version>6.0.4.Final</version>
            </dependency>
            <dependency>
                <groupId>org.objenesis</groupId>
                <artifactId>objenesis</artifactId>
                <version>3.5</version>
            </dependency>
            <dependency>
                <groupId>org.postgresql</groupId>
                <artifactId>postgresql</artifactId>
                <version>42.7.10</version>
            </dependency>
            <dependency>
                <groupId>org.spockframework</groupId>
                <artifactId>spock-bom</artifactId>
                <version>2.4-groovy-5.0</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>com.sun.xml.bind</groupId>
                <artifactId>jaxb-impl</artifactId>
                <version>4.0.6</version>
            </dependency>
            <dependency>
                <groupId>io.github.thanospapapetrou.nefeli</groupId>
                <artifactId>nefeli-common</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.thanospapapetrou.nefeli</groupId>
                <artifactId>nefeli-db</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.thanospapapetrou.nefeli</groupId>
                <artifactId>nefeli-harvester</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.thanospapapetrou.nefeli</groupId>
                <artifactId>nefeli-oai-pmh</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.thanospapapetrou.nefeli.containers</groupId>
                <artifactId>nefeli-branding</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.thanospapapetrou.nefeli.containers</groupId>
                <artifactId>nefeli-friends</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.thanospapapetrou.nefeli.containers</groupId>
                <artifactId>nefeli-oai-identifier</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.thanospapapetrou.nefeli.containers</groupId>
                <artifactId>nefeli-rights</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.thanospapapetrou.nefeli.containers</groupId>
                <artifactId>nefeli-toolkit</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>net.bytebuddy</groupId>
                <artifactId>byte-buddy</artifactId>
                <version>1.18.8</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <version>3.5.5</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>3.5.0</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.5.5</version>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.gmavenplus</groupId>
                    <artifactId>gmavenplus-plugin</artifactId>
                    <version>4.3.1</version>
                </plugin>
                <plugin>
                    <groupId>org.jacoco</groupId>
                    <artifactId>jacoco-maven-plugin</artifactId>
                    <version>0.8.14</version>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <configuration>
                    <includes>
                        <include>**/*IT.class</include>
                    </includes>
                    <testClassesDirectory>${project.build.directory}/it-classes</testClassesDirectory>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>integration-test</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <includes>
                        <include>**/*Spec.class</include>
                    </includes>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.gmavenplus</groupId>
                <artifactId>gmavenplus-plugin</artifactId>
                <executions>
                    <execution>
                        <id>default-compileTests</id>
                        <goals>
                            <goal>compileTests</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>default-compileIntegrationTests</id>
                        <goals>
                            <goal>compileTests</goal>
                        </goals>
                        <configuration>
                            <testSources>
                                <testSource>
                                    <directory>${project.basedir}/src/it/groovy</directory>
                                    <includes>
                                        <include>**/*.groovy</include>
                                    </includes>
                                </testSource>
                            </testSources>
                            <testOutputDirectory>${project.build.directory}/it-classes</testOutputDirectory>
                        </configuration>
                    </execution>
                    <execution>
                        <id>default-addTestSources</id>
                        <goals>
                            <goal>addTestSources</goal>
                        </goals>
                        <configuration>
                            <testSources>
                                <testSource>
                                    <directory>${project.basedir}/src/it/groovy</directory>
                                    <includes>
                                        <include>**/*.groovy</include>
                                    </includes>
                                </testSource>
                            </testSources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>prepare-agent</goal>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
